--- a/index.html
+++ b/index.html
@@ -2,25 +2,44 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUMAN OS v2.3</title>
+    <title>HUMAN OS v3.0 | Executive Terminal</title>
     <style>
-        body { background: #050505; color: #ff3e3e; font-family: monospace; padding: 20px; text-align: center; }
-        #box { max-width: 500px; margin: auto; border: 2px solid #ff3e3e; padding: 20px; background: #000; }
-        #chat { height: 350px; overflow-y: auto; text-align: left; margin: 10px 0; border-bottom: 1px solid #330000; }
-        input { width: 100%; background: #111; border: 1px solid #ff3e3e; color: #fff; padding: 12px; box-sizing: border-box; margin-top: 10px; }
-        button { width: 100%; background: #ff3e3e; color: #000; border: none; padding: 12px; font-weight: bold; cursor: pointer; margin: 10px 0; }
-        .u { color: #fff; text-align: right; margin: 5px; }
-        .a { color: #ff3e3e; background: #1a0000; padding: 10px; margin: 5px; border-radius: 5px; }
+        :root { --gold: #c5a059; --bg: #0a0b0d; --panel: #16181d; --text: #e1e1e1; }
+        body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', Roboto, Helvetica, sans-serif; margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
+        #box { width: 90%; max-width: 800px; background: var(--panel); border: 1px solid #333; border-radius: 8px; display: flex; flex-direction: column; height: 90vh; box-shadow: 0 20px 50px rgba(0,0,0,0.5); }
+        #header { padding: 20px; border-bottom: 1px solid #333; text-align: left; display: flex; justify-content: space-between; align-items: center; }
+        #header h3 { margin: 0; color: var(--gold); letter-spacing: 2px; font-weight: 300; font-size: 1.2rem; }
+        #chat { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
+        .u { align-self: flex-end; background: #2c313a; padding: 12px 18px; border-radius: 15px 15px 0 15px; max-width: 80%; font-size: 0.95rem; border: 1px solid #444; }
+        .a { align-self: flex-start; background: transparent; padding: 12px 0; border-radius: 0; max-width: 100%; font-size: 1rem; border-left: 3px solid var(--gold); padding-left: 15px; line-height: 1.6; }
+        #controls { padding: 20px; background: #0f1115; border-top: 1px solid #333; }
+        .input-group { display: flex; gap: 10px; margin-bottom: 10px; }
+        input { background: #1a1d23; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 5px; outline: none; transition: 0.3s; }
+        input:focus { border-color: var(--gold); }
+        #key { width: 150px; font-size: 0.8rem; }
+        #input { flex-grow: 1; }
+        button { background: var(--gold); color: #000; border: none; padding: 12px 25px; border-radius: 5px; font-weight: bold; cursor: pointer; transition: 0.3s; }
+        button:hover { background: #d4b475; transform: translateY(-1px); }
+        .status { font-size: 0.7rem; color: #666; text-transform: uppercase; letter-spacing: 1px; }
     </style>
 </head>
 <body onload="document.getElementById('key').value = localStorage.getItem('gkey') || ''">
     <div id="box">
-        <h3>> HUMAN OS v2.3</h3>
-        <input type="password" id="key" placeholder="COLE SUA CHAVE gsk_...">
-        <div id="chat"></div>
-        <input type="text" id="input" placeholder="Sua mensagem...">
-        <button onclick="enviar()">ENVIAR</button>
-        <button onclick="localStorage.clear(); location.reload();" style="background: #333; color: #ccc; font-size: 10px;">LIMPAR MEMÓRIA</button>
+        <div id="header">
+            <h3>HUMAN OS <span style="font-weight: bold;">EXECUTIVE</span></h3>
+            <div class="status">Market Access: Active</div>
+        </div>
+        <div id="chat">
+            <div class="a"><b>SYSTEM:</b> Terminal inicializado. Pronto para análise estratégica de mercado e escala global.</div>
+        </div>
+        <div id="controls">
+            <div class="input-group">
+                <input type="password" id="key" placeholder="API KEY">
+                <input type="text" id="input" placeholder="Digite sua ordem estratégica...">
+                <button onclick="enviar()">EXECUTAR</button>
+            </div>
+            <button onclick="localStorage.clear(); location.reload();" style="background: transparent; color: #555; border: 1px solid #333; width: 100%; margin-top: 5px; font-size: 10px;">RESET TERMINAL</button>
+        </div>
     </div>
 
 <script>
@@ -32,33 +51,25 @@ async function enviar() {
     
     if(!key || !msg) return;
     localStorage.setItem('gkey', key);
-    chat.innerHTML += `<div class="u"><b>Você:</b> ${msg}</div>`;
+    chat.innerHTML += `<div class="u">${msg}</div>`;
     input.value = "";
 
     try {
         const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
             method: "POST",
-            headers: {
-                "Authorization": "Bearer " + key,
-                "Content-Type": "application/json"
-            },
+            headers: { "Authorization": "Bearer " + key, "Content-Type": "application/json" },
             body: JSON.stringify({
                 model: "llama-3.3-70b-versatile",
                 messages: [
-                    { role: "system", content: "Responda em português." },
+                    { role: "system", content: "Você é o consultor estratégico sênior do HUMAN OS. Suas respostas são focadas em business, escala bilionária, eficiência financeira e crescimento exponencial. Use linguagem executiva e seja direto." },
                     { role: "user", content: msg }
                 ]
             })
         });
-
         const data = await response.json();
-        if(data.choices) {
-            chat.innerHTML += `<div class="a"><b>IA:</b> ${data.choices[0].message.content}</div>`;
-        } else {
-            chat.innerHTML += `<div style="color:yellow">Erro: ${data.error.message}</div>`;
-        }
+        chat.innerHTML += `<div class="a"><b>ESTRATEGISTA:</b> ${data.choices[0].message.content}</div>`;
     } catch (e) {
-        chat.innerHTML += `<div style="color:red">Erro de conexão. Verifique sua internet ou a chave.</div>`;
+        chat.innerHTML += `<div style="color:#ff6b6b">Conexion Error. Check API status.</div>`;
     }
     chat.scrollTop = chat.scrollHeight;
 }
