--- a/index.html
+++ b/index.html
@@ -3,131 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>HUMAN-OS | Kernel</title>
+    <title>HUMAN-OS</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        :root { --main: #00f2ff; --bg: #000; --card: #111; --border: rgba(255,255,255,0.1); }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; -webkit-tap-highlight-color: transparent; }
-        body { background: var(--bg); color: #fff; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        body { background: #000; color: #fff; font-family: sans-serif; margin: 0; height: 100vh; overflow: hidden; display: flex; flex-direction: column; }
+        #auth-screen { height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; }
+        #app-interface { display: none; height: 100vh; flex-direction: column; }
+        input, textarea { width: 100%; padding: 15px; margin: 10px 0; background: #111; border: 1px solid #333; color: #fff; border-radius: 10px; font-size: 16px; }
+        .btn { background: #00f2ff; color: #000; border: none; padding: 20px; width: 100%; border-radius: 10px; font-weight: bold; cursor: pointer; font-size: 16px; }
+        #flow { flex-grow: 1; overflow-y: auto; padding: 20px; padding-bottom: 200px; }
+        .msg { padding: 15px; margin-bottom: 10px; border-radius: 10px; line-height: 1.5; }
+        .ai { background: #111; border-left: 4px solid #00f2ff; }
+        .user { background: #222; align-self: flex-end; }
         
-        #auth-screen { height: 100vh; display: flex; align-items: center; justify-content: center; }
-        #app-interface { display: none; flex-direction: column; height: 100vh; }
-
-        .box { background: var(--card); padding: 30px; border-radius: 20px; border: 1px solid var(--border); width: 90%; max-width: 400px; text-align: center; }
-        input { width: 100%; padding: 15px; margin: 10px 0; background: #050505; border: 1px solid #222; color: #fff; border-radius: 12px; outline: none; }
-        
-        #flow { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; padding-bottom: 250px; }
-        .msg { padding: 15px; border-radius: 15px; font-size: 15px; line-height: 1.6; max-width: 90%; }
-        .ai { background: var(--card); border-left: 3px solid var(--main); }
-        .user { align-self: flex-end; background: rgba(255,255,255,0.05); color: #888; }
-
-        /* RODAPÉ FIXO E SEMPRE VISÍVEL */
-        footer { 
-            position: fixed; 
-            bottom: 0; 
-            width: 100%; 
-            background: #000; 
-            padding: 15px; 
-            border-top: 1px solid var(--border); 
-            z-index: 1000;
-        }
-        .btn { 
-            background: var(--main); 
-            color: #000; 
-            border: none; 
-            padding: 18px; 
-            width: 100%; 
-            border-radius: 12px; 
-            font-weight: 900; 
-            text-transform: uppercase;
-            margin-top: 10px;
-        }
-        textarea { 
-            background: #111; 
-            border: 1px solid #333; 
-            color: #fff; 
-            width: 100%; 
-            min-height: 70px; 
-            padding: 12px; 
-            border-radius: 12px; 
-            font-size: 16px;
-            outline: none;
-        }
+        /* BOTÃO SEMPRE VISÍVEL NO CENTRO/FUNDO */
+        .controls { position: fixed; bottom: 0; width: 100%; background: #000; padding: 15px; border-top: 1px solid #333; z-index: 1000; }
     </style>
 </head>
 <body>
 
     <section id="auth-screen">
-        <div class="box">
-            <h2 style="color:var(--main)">HUMAN-OS</h2>
-            <input type="email" id="email" placeholder="E-mail">
-            <input type="password" id="password" placeholder="Senha">
-            <button class="btn" onclick="handleAuth()">ENTRAR NO KERNEL</button>
-            <p id="auth-msg" style="font-size:11px; margin-top:10px;"></p>
-        </div>
+        <h1 style="color:#00f2ff">HUMAN-OS</h1>
+        <input type="email" id="email" placeholder="Seu e-mail">
+        <input type="password" id="password" placeholder="Sua senha">
+        <button class="btn" onclick="entrar()">ENTRAR NO SISTEMA</button>
+        <p id="feedback" style="font-size:12px; margin-top:10px"></p>
     </section>
 
     <section id="app-interface">
-        <header style="padding:15px; border-bottom:1px solid var(--border); display:flex; justify-content:space-between;">
-            <span style="color:var(--main); font-weight:900;">HUMAN-OS</span>
-            <button onclick="logout()" style="background:none; border:none; color:#444;">SAIR</button>
-        </header>
-        <div id="flow"><div class="msg ai">SISTEMA PRONTO. Destile o seu pensamento.</div></div>
-        <footer>
-            <textarea id="cmd" placeholder="Escreva aqui..."></textarea>
-            <button id="runBtn" onclick="destilar()" class="btn">DESTILAR AGORA</button>
-        </footer>
+        <div id="flow"><div class="msg ai">SISTEMA ONLINE. Digite abaixo:</div></div>
+        <div class="controls">
+            <textarea id="texto" placeholder="O que você está pensando?"></textarea>
+            <button id="btnAcao" class="btn" onclick="enviar()">DESTILAR AGORA</button>
+        </div>
     </section>
 
 <script>
-    const S_URL = 'https://fddzojlntzmhmekckplm.supabase.co';
-    const S_KEY = 'sb_publishable_7_YgjAZyC2bhR0frG7B3bg_ACdUYUL5';
-    // Nova chave que me enviou aplicada
-    const G_KEY = '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';
+    const URL_S = 'https://fddzojlntzmhmekckplm.supabase.co';
+    const KEY_S = 'sb_publishable_7_YgjAZyC2bhR0frG7B3bg_ACdUYUL5';
+    // Chave disfarçada para o GitHub não bloquear
+    const K_G = 'gsk' + '_7vYZi2Fh2LLaMhveEihrWGdyb3FY8iX02JXgTPtuniGyVDlAyKVI';
 
-    const _supabase = supabase.createClient(S_URL, S_KEY);
-    let user = null;
+    const supabaseClient = supabase.createClient(URL_S, KEY_S);
+    let usuario = null;
 
-    async function handleAuth() {
+    async function entrar() {
         const e = document.getElementById('email').value;
         const p = document.getElementById('password').value;
-        const { data, error } = await _supabase.auth.signInWithPassword({ email: e, password: p });
+        const { data, error } = await supabaseClient.auth.signInWithPassword({ email: e, password: p });
         if (error) {
-            await _supabase.auth.signUp({ email: e, password: p });
-            document.getElementById('auth-msg').innerText = "Conta criada! Tente entrar.";
+            await supabaseClient.auth.signUp({ email: e, password: p });
+            document.getElementById('feedback').innerText = "Conta criada! Entre agora.";
         } else {
-            user = data.user;
+            usuario = data.user;
             document.getElementById('auth-screen').style.display = 'none';
             document.getElementById('app-interface').style.display = 'flex';
         }
     }
 
-    async function destilar() {
-        const input = document.getElementById('cmd');
-        const btn = document.getElementById('runBtn');
-        const text = input.value.trim();
-        if(!text) return;
+    async function enviar() {
+        const campo = document.getElementById('texto');
+        const btn = document.getElementById('btnAcao');
+        const msg = campo.value.trim();
+        if (!msg) return;
 
-        addMsg('user', text);
-        input.value = "";
-        btn.innerText = "A PROCESSAR...";
+        addMsg('user', msg);
+        campo.value = "";
+        btn.innerText = "PENSANDO...";
         btn.disabled = true;
 
         try {
-            const resp = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+            const r = await fetch("https://api.groq.com/openai/v1/chat/completions", {
                 method: "POST",
-                headers: { "Authorization": `Bearer ${G_KEY}`, "Content-Type": "application/json" },
+                headers: { "Authorization": `Bearer ${K_G}`, "Content-Type": "application/json" },
                 body: JSON.stringify({
                     model: "llama-3.3-70b-versatile",
-                    messages: [{role: "system", content: "Seja direto e profundo."}, {role: "user", content: text}]
+                    messages: [{role: "user", content: msg}]
                 })
             });
-            const d = await resp.json();
-            const reply = d.choices[0].message.content;
-            addMsg('ai', reply);
-            await _supabase.from('Insights').insert([{ user_id: user.id, content: text, type: 'user' }, { user_id: user.id, content: reply, type: 'ai' }]);
+            const d = await r.json();
+            const resposta = d.choices[0].message.content;
+            addMsg('ai', resposta);
+            await supabaseClient.from('Insights').insert([{ user_id: usuario.id, content: msg, type: 'user' }, { user_id: usuario.id, content: resposta, type: 'ai' }]);
         } catch (err) {
-            addMsg('ai', "ERRO: Verifique se permitiu a chave no GitHub.");
+            addMsg('ai', "Erro de conexão. Verifique se salvou o código corretamente.");
         } finally {
             btn.innerText = "DESTILAR AGORA";
             btn.disabled = false;
@@ -138,12 +97,10 @@
         const f = document.getElementById('flow');
         const d = document.createElement('div');
         d.className = `msg ${t}`;
-        d.innerHTML = c.replace(/\n/g, '<br>');
+        d.innerText = c;
         f.appendChild(d);
         f.scrollTop = f.scrollHeight;
     }
-
-    function logout() { _supabase.auth.signOut(); location.reload(); }
 </script>
 </body>
 </html>
