--- a/index.html
+++ b/index.html
@@ -17,27 +17,24 @@
             color: #fff; height: 100vh; display: flex; flex-direction: column; overflow: hidden; 
         }
 
-        /* Login Screen */
         #auth-screen { height: 100vh; display: flex; align-items: center; justify-content: center; padding: 20px; }
         .login-card { background: rgba(0, 30, 35, 0.85); padding: 35px; border-radius: 25px; border: 1px solid var(--neon); backdrop-filter: blur(15px); width: 100%; max-width: 360px; text-align: center; box-shadow: 0 0 40px rgba(0, 242, 255, 0.3); }
         
         input { width: 100%; padding: 16px; margin: 10px 0; background: rgba(0,0,0,0.7); border: 1px solid #1a4a4d; color: var(--neon); border-radius: 12px; outline: none; font-size: 16px; }
 
-        /* Main Interface */
         #app-interface { display: none; flex-direction: column; height: 100vh; position: relative; }
         header { padding: 15px 20px; display: flex; justify-content: space-between; align-items: center; background: rgba(0,0,0,0.6); backdrop-filter: blur(10px); border-bottom: 1px solid rgba(0, 242, 255, 0.2); }
         .brand { font-weight: 900; color: var(--neon); letter-spacing: 4px; font-size: 20px; text-shadow: 0 0 10px var(--neon); }
         
         .lang-bar { display: flex; gap: 8px; padding: 12px; justify-content: center; background: rgba(0,0,0,0.3); }
-        .l-btn { background: rgba(255,255,255,0.05); border: 1px solid #333; color: #888; padding: 7px 14px; border-radius: 8px; font-size: 11px; font-weight: bold; transition: 0.3s; }
+        .l-btn { background: rgba(255,255,255,0.05); border: 1px solid #333; color: #888; padding: 7px 14px; border-radius: 8px; font-size: 11px; font-weight: bold; }
         .l-btn.active { border-color: var(--neon); color: var(--neon); background: rgba(0, 242, 255, 0.15); box-shadow: 0 0 10px rgba(0,242,255,0.2); }
 
         #flow { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 18px; padding-bottom: 240px; }
         .msg { padding: 18px; border-radius: 18px; font-size: 15px; line-height: 1.6; max-width: 88%; backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
         .ai { background: rgba(0, 45, 50, 0.75); align-self: flex-start; border-left: 5px solid var(--neon); box-shadow: 0 8px 25px rgba(0,0,0,0.5); }
-        .user { background: rgba(255,255,255,0.08); align-self: flex-end; color: #ddd; border-right: 1px solid rgba(255,255,255,0.2); }
+        .user { background: rgba(255,255,255,0.08); align-self: flex-end; color: #ddd; }
 
-        /* Control Area */
         footer { position: fixed; bottom: 0; width: 100%; padding: 20px; background: linear-gradient(transparent, #000 40%); z-index: 9999; }
         .input-wrap { background: rgba(20, 25, 25, 0.98); border: 1px solid #2a5a5d; border-radius: 18px; padding: 12px; box-shadow: 0 -10px 30px rgba(0,0,0,0.6); }
         textarea { width: 100%; background: transparent; border: none; color: #fff; padding: 8px; font-size: 16px; outline: none; resize: none; min-height: 55px; }
@@ -65,9 +62,9 @@
         <div class="login-card">
             <h1 style="color:var(--neon); margin-bottom:5px; letter-spacing:5px;">HUMAN-OS</h1>
             <p style="font-size:9px; color:#4a8a8d; margin-bottom:30px; letter-spacing:2px;">KERNEL ACCESS TERMINAL</p>
-            <input type="email" id="email" placeholder="E-mail de Acesso">
+            <input type="email" id="email" placeholder="Sincronizar E-mail">
             <input type="password" id="password" placeholder="Chave de Segurança">
-            <button class="btn-send" onclick="handleAuth()">Sincronizar</button>
+            <button class="btn-send" onclick="handleAuth()">ENTRAR NO KERNEL</button>
             <p id="auth-msg" style="font-size:11px; margin-top:15px; color:var(--neon);"></p>
         </div>
     </section>
@@ -75,7 +72,7 @@
     <section id="app-interface">
         <header>
             <div class="brand">HUMAN-OS</div>
-            <button onclick="logout()" style="background:none; border:none; color:#555; font-size:10px;">LOGOUT</button>
+            <button onclick="logout()" style="background:none; border:none; color:#555; font-size:10px;">DISCONNECT</button>
         </header>
 
         <div class="lang-bar">
@@ -85,13 +82,13 @@
         </div>
 
         <div id="flow">
-            <div class="msg ai"><b>SISTEMA DESTRANCADO.</b><br>O Kernel está pronto para processar seus dados.</div>
+            <div class="msg ai"><b>SISTEMA ONLINE.</b><br>Pronto para gerar insights. Digite sua instrução abaixo.</div>
         </div>
 
         <footer>
             <div class="input-wrap">
-                <textarea id="cmd" placeholder="O que deseja destilar?"></textarea>
-                <button id="runBtn" onclick="destilar()" class="btn-send">DESTILAR AGORA</button>
+                <textarea id="cmd" placeholder="O que você está pensando?"></textarea>
+                <button id="runBtn" onclick="destilar()" class="btn-send">PROCESSAR INSIGHT</button>
             </div>
         </footer>
     </section>
@@ -99,7 +96,7 @@
 <script>
     const S_U = 'https://fddzojlntzmhmekckplm.supabase.co';
     const S_K = 'sb_publishable_7_YgjAZyC2bhR0frG7B3bg_ACdUYUL5';
-    // Drible no GitHub: Chave fatiada
+    // Proteção de chave contra bloqueio automático
     const G_1 = 'gsk';
     const G_2 = '_7vYZi2Fh2LLaMhveEihrWGdyb3FY8iX02JXgTPtuniGyVDlAyKVI';
     const G_KEY = G_1 + G_2;
@@ -120,7 +117,7 @@
         const { data, error } = await _supabase.auth.signInWithPassword({ email: e, password: p });
         if (error) {
             await _supabase.auth.signUp({ email: e, password: p });
-            document.getElementById('auth-msg').innerText = "Novo registro efetuado. Logue novamente.";
+            document.getElementById('auth-msg').innerText = "Novo registro efetuado. Acesse agora.";
         } else {
             user = data.user;
             document.getElementById('auth-screen').style.display = 'none';
@@ -140,9 +137,9 @@
         btn.disabled = true;
 
         const prompts = {
-            'pt': 'Responda sempre em Português. Seja inteligente, técnico e profundo.',
-            'en': 'Respond in English. Be technical and deep.',
-            'es': 'Responde en Español. Sé profundo y claro.'
+            'pt': 'Responda sempre em Português. Seja extremamente direto, profundo e focado em produtividade máxima.',
+            'en': 'Always respond in English. Technical mindset, high productivity focus.',
+            'es': 'Responde siempre en Español de forma profunda.'
         };
 
         try {
@@ -159,9 +156,9 @@
             addMsg('ai', reply);
             await _supabase.from('Insights').insert([{ user_id: user.id, content: text, type: 'user' }, { user_id: user.id, content: reply, type: 'ai' }]);
         } catch (err) {
-            addMsg('ai', "ERRO: Falha na conexão neural.");
+            addMsg('ai', "ERRO: O sistema não conseguiu processar a conexão.");
         } finally {
-            btn.innerText = "DESTILAR AGORA";
+            btn.innerText = "PROCESSAR INSIGHT";
             btn.disabled = false;
         }
     }
